--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -6,6 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+      - run: sudo apt-get install python3-lxml
       - run: pip install --upgrade pip setuptools wheel
       - run: pip install black codespell flake8 isort pytest pyupgrade safety
       - run: pip install -r requirements_test.txt
